# Bakery

./: .gitignore  pyproject.toml
bakery/: main.py
bakery/api/errors/: __init__.py  ingredient.py  recipe.py
bakery/api/routes/: __init__.py  hello.py  ingredient.py  recipe.py
bakery/database/: connector.py  models.py
bakery/schemas/: ingredient.py  recipe.py
bakery/services/: ingredient.py  recipe.py
